corrected overflow

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 html, body {
     height: 100%;            
     margin: 0;               
-}
+    overflow-x: hidden;}
 
 
 #phd::after {
